syntax = "proto3";

package  tv.uob.grpc;


option java_multiple_files = true;
option java_package = "tv.uob.grpc";

message Stream {
    int64 id = 1;
    int32 userId = 2;
    string streamKey = 3;
    string description = 4;
    string title = 5;
}

message UserId {
    int32 value = 1;
}

message CreateStreamForUserResponse {
    bool success = 1;
    Stream stream = 3;
}

message StreamId {
    int64 value = 1;
}

message StreamKey {
    string value = 1;
}

message StreamAuthenResult {
    bool authenticated = 1;
    string message = 2;
}

service StreamService {
    rpc CreateStreamForUser(UserId) returns (CreateStreamForUserResponse) {}
    rpc GetStreamForUser(UserId) returns (Stream) {}
    rpc GetStreamById(StreamId) returns (Stream) {}
    rpc AuthenStreamToPublish(StreamKey) returns (StreamAuthenResult) {}
}
